--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sommer's favorite things</title>
+            <link href="styles.css" rel="stylesheet" type="text/css">
+               <title>Sommer's favorite things</title>
     </head>
     <body>
         <h1>My favorite things</h1>
