--- a/favorite-places.html
+++ b/favorite-places.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
+        <link href="styles.css" rel="stylesheet" type="text/css">
 <title>Favorite Places</title>
 <body>
+<h1>Favorite Places on the West Coast</h1>
+
 <h1>Oceanside, California</h1>
-
-<img src=" https://www.areavibes.com/photos/places/oceanside-ca-1200.jpg">
-
+<img src=" https://www.areavibes.com/photos/places/oceanside-ca-1200.jpg" style="width:700px;height:500px;">
+<p>Oceanside is a beautiful place to go swimming and soak up the sun.</p>
 <h1>Mount Hood</h1>
-<img src="https://images.theoutbound.com/uploads/1441480015712/7ppks79tgb1vpldi/42e603b14da2cac235c0949485f42f3b?w=1200&h=630&fit=crop&auto=format&s=de8b860bd53e68e0f112aa3c4c9c2ef4">
+<img src="https://images.theoutbound.com/uploads/1441480015712/7ppks79tgb1vpldi/42e603b14da2cac235c0949485f42f3b?w=1200&h=630&fit=crop&auto=format&s=de8b860bd53e68e0f112aa3c4c9c2ef4" style="width:700px;height:500px;">
+<p>Mount Hood is a beautiful area to go hiking in.</p>
+
+<h1>seattle, washington</h1>
+<img src="https://s.hdnux.com/photos/01/00/11/20/16815111/7/920x920.jpg">
+<p>seattle washington is where the seahawks football team is located also the first starbucks location</p>
+
 
 </body>
 
